fix(module:modal): fix confirm icon align

--- a/components/modal/style/confirm.less
+++ b/components/modal/style/confirm.less
@@ -49,6 +49,11 @@
       // `content` after `icon` should set marginLeft
       + .@{confirm-prefix-cls}-title + .@{confirm-prefix-cls}-content {
         margin-left: 38px;
+
+        [dir = 'rtl'] & {
+          margin-left: 0;
+          margin-right: 38px;
+        }
       }
     }
   }
